[package]
name = "exert-actix-common"
version = "0.1.0"
authors = ["chaosannals <chaosannals@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "*"
chrono = "*"
rand = "*"
actix-web = "*"
actix-rt = "*"
reqwest = { version = "0.10", features = ["blocking", "json"] }
