[package]
name = "web1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
env_logger.workspace = true
log.workspace = true

derive_more = "0.99.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
