[package]
name = "wsserver1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix.workspace = true
actix-web.workspace = true
actix-web-actors.workspace = true
actix-files.workspace = true
awc.workspace = true
env_logger.workspace = true
log.workspace = true

futures-util = { version = "0.3.17", default-features = false, features = ["sink"] }
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.8"